[package]
name = "connectedpapers"
authors = ["Deeptendu Santra <deeptendu.santra@pm.me>"]
version = "0.1.0"
edition = "2021"
description = "Unoffical client for connectedpapers API"
license = "MIT"
homepage = "https://github.com/Dsantra92/connnectedpapers.rs"
keywords = ["connnectedpapers"]
repository = "https://github.com/Dsantra92/connnectedpapers.rs"
readme = "README.md"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[[example]]
name = "usage"
